Add the ability to import/export settings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,6 @@ endfunction()
 
 define_option(CMAKE_BUILD_TYPE "Debug")
 
+set(FLU_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
+
 add_subdirectory(flu-sim)
