--- a/setup/build.ini
+++ b/setup/build.ini
@@ -16,7 +16,7 @@ toolkit_build_tests = toolkit-build-tests: False
 toolkit_build_performance = build-performance: False
 toolkit_build_profiler = build-profiler: none
 toolkit_sanitizers = sanitizers: none
-toolkit_enable_yaml_serialization = yaml-serialization: False
+toolkit_enable_yaml_serialization = yaml-serialization: True
 onyx_build_demos = build-demos: False
 onyx_use_implot = use-implot: False
 ;you can override default values by creating new sections as follows:
