The simulator is now fully configurable from command line

--- a/flu-sim/CMakeLists.txt
+++ b/flu-sim/CMakeLists.txt
@@ -8,6 +8,7 @@ set(SOURCES
     flu/app/intro_layer.cpp
     flu/app/visualization.cpp
     flu/app/inspector.cpp
+    flu/app/argparse.cpp
     flu/simulation/solver.cpp
     flu/simulation/kernel.cpp
     flu/simulation/lookup.cpp
@@ -22,13 +23,18 @@ FetchContent_Declare(
     GIT_REPOSITORY https://github.com/ismawno/onyx.git
     GIT_TAG main
 )
-
 FetchContent_MakeAvailable(onyx)
 
+FetchContent_Declare(
+    argparse
+    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
+    GIT_TAG v3.2
+)
+FetchContent_MakeAvailable(argparse)
 
 tkit_register_for_reflection(flu-sim SOURCES flu/simulation/settings.hpp)
 
-target_include_directories(flu-sim PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+target_include_directories(flu-sim PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${argparse_SOURCE_DIR}/include)
 target_link_libraries(flu-sim PRIVATE onyx)
 target_compile_definitions(flu-sim PRIVATE FLU_ROOT_PATH="${FLU_ROOT_PATH}")
 
