If cmake option is equal to cli option, no need to add both

--- a/setup/build.ini
+++ b/setup/build.ini
@@ -3,6 +3,7 @@
 ;you may add/edit key-value pairs in this section and changes will be reflected as long as the format is correct. running 'cmake_scanner.py' again will not override your changes. other sections you add will also remain untouched. all keys/section names should be lower case, except when creating override sections (explained above).
 ;hyphen ('-') and underscore ('_') separators are interchangeable in this file. you may use either. the cmake options will always end up with underscores, but the command line options will be hyphenated, no matter what.
 ;this section format goes as follows: <lowercase-cmake-option> = <lowercase-build-cli-option>: <default-value>
+;you may write <lowercase-cmake-option> = <default-value> if you wish to use the same name for both.
 ;<lowercase-cmake-option> -> it is the raw cmake option name in lower case (python parser requires it), except for the '-d' prefix.
 ;<lowercase-build-cli-option> -> it is the corresponding 'ergonomic' command line option for the 'build.py' script. it is just a convenience.
 ;<default-value> -> it is the value 'build.py' will use if no other value is provided through the command line. if the value is a boolean, you may use 'true/on/yes' or 'false/off/no'. case insensitive.
