Update setup files

--- a/setup/build.ini
+++ b/setup/build.ini
@@ -8,6 +8,24 @@
 ;<lowercase-build-cli-option> -> it is the corresponding 'ergonomic' command line option for the 'build.py' script. it is just a convenience.
 ;<default-value> -> it is the value 'build.py' will use if no other value is provided through the command line. if the value is a boolean, you may use 'true/on/yes' or 'false/off/no'. case insensitive.
 cmake-build-type = build-type: Debug
+vulkit-build-tests = vulkit-build-tests: False
+toolkit-enable-info-logs = info-logs: False
+toolkit-enable-warning-logs = warning-logs: False
+toolkit-enable-asserts = asserts: False
+toolkit-enable-arena-allocator = arena-allocator: False
+toolkit-enable-block-allocator = block-allocator: False
+toolkit-enable-stack-allocator = stack-allocator: False
+toolkit-enable-multiprocessing = multiprocessing: False
+toolkit-enable-profiling = profiling: False
+toolkit-enable-instrumentation = instrumentation: False
+toolkit-enable-vulkan-instrumentation = vulkan-instrumentation: False
+toolkit-build-tests = toolkit-build-tests: False
+toolkit-build-performance = build-performance: False
+toolkit-build-profiler = build-profiler: none
+toolkit-sanitizers = sanitizers: none
+toolkit-enable-yaml-serialization = yaml-serialization: False
+onyx-build-demos = build-demos: False
+onyx-use-implot = use-implot: False
 ;you can override default values for some options when other options take specific values by creating new sections as follows:
 ;[<lowercase-cmake-option>.<value-that-triggers-override>]
 ;<lowercase-build-cli-option> = <new-default-value>
