--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,9 +9,11 @@ set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Dist")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 function(define_option varname default)
-    if (NOT DEFINED ${varname})
-        set(${varname} ${default} PARENT_SCOPE)
-    endif()
+  if(NOT DEFINED ${varname})
+    set(${varname}
+        ${default}
+        PARENT_SCOPE)
+  endif()
 endfunction()
 
 define_option(CMAKE_BUILD_TYPE "Debug")
@@ -19,3 +21,4 @@ define_option(CMAKE_BUILD_TYPE "Debug")
 set(DRIZZLE_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(drizzle)
+
