Adapt drizzle to new onyx and toolkit api and changes

--- a/drizzle/CMakeLists.txt
+++ b/drizzle/CMakeLists.txt
@@ -11,35 +11,36 @@ set(SOURCES
     driz/app/argparse.cpp
     driz/simulation/solver.cpp
     driz/simulation/kernel.cpp
-    driz/simulation/lookup.cpp
-)
+    driz/simulation/lookup.cpp)
 
 add_executable(drizzle ${SOURCES})
 
-
 include(FetchContent)
 FetchContent_Declare(
-    onyx
-    GIT_REPOSITORY https://github.com/ismawno/onyx.git
-    GIT_TAG v0.1.0
-)
+  onyx
+  GIT_REPOSITORY https://github.com/ismawno/onyx.git
+  GIT_TAG main
+  GIT_SHALLOW TRUE
+  GIT_PROGRESS TRUE)
 FetchContent_MakeAvailable(onyx)
 
 FetchContent_Declare(
-    argparse
-    GIT_REPOSITORY https://github.com/p-ranav/argparse.git
-    GIT_TAG v3.2
-)
+  argparse
+  GIT_REPOSITORY https://github.com/p-ranav/argparse.git
+  GIT_TAG v3.2
+  GIT_SHALLOW TRUE
+  GIT_PROGRESS TRUE)
 FetchContent_MakeAvailable(argparse)
 
-tkit_register_for_reflection(drizzle SOURCES driz/simulation/settings.hpp)
+tkit_register_for_reflection(drizzle SOURCES driz/simulation/settings.hpp
+                             driz/simulation/kernel.hpp)
+tkit_register_for_yaml_serialization(
+  drizzle SOURCES driz/simulation/settings.hpp driz/simulation/kernel.hpp)
 
-target_include_directories(drizzle PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${argparse_SOURCE_DIR}/include)
+target_include_directories(drizzle PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
+                                           ${argparse_SOURCE_DIR}/include)
 target_link_libraries(drizzle PRIVATE onyx)
-target_compile_definitions(drizzle PRIVATE DRIZ_ROOT_PATH="${DRIZZLE_ROOT_PATH}")
+target_compile_definitions(drizzle PRIVATE DRIZ_ROOT_PATH="${DRIZZLE_ROOT_PATH}"
+                                           DRIZ_VERSION=\"v0.1.2\")
 
-if (MSVC)
-    tkit_configure_compile_link_options(drizzle FLAGS /W4 /WX)
-else()
-    tkit_configure_compile_link_options(drizzle FLAGS -Wall -Wextra -Wpedantic -Werror)
-endif()
+tkit_default_configure(drizzle)
