--- a/setup/build.ini
+++ b/setup/build.ini
@@ -10,28 +10,64 @@
 ;<lowercase-build-cli-option> -> it is the corresponding 'ergonomic' command line option for the 'build.py' script. it is just a convenience.
 ;<default-value> -> it is the value 'build.py' will use if no other value is provided through the command line. if the value is a boolean, you may use 'true/on/yes' or 'false/off/no'. case insensitive.
 
-;general settings
+;drizzle - build
 cmake-build-type = build-type: Debug
-c = m: a
-general settings
-vulkit-build-tests = vulkit-build-tests: False
+
+;toolkit - build
+toolkit-build-tests = build-tests: False
+toolkit-build-performance = build-performance: False
+toolkit-build-profiler = build-profiler: none
+toolkit-enable-symbols = symbols: False
+toolkit-sanitizers = sanitizers: none
+
+;toolkit - feature
 toolkit-enable-info-logs = info-logs: False
 toolkit-enable-warning-logs = warning-logs: False
 toolkit-enable-asserts = asserts: False
-toolkit-enable-arena-allocator = arena-allocator: False
-toolkit-enable-block-allocator = block-allocator: False
+toolkit-enable-arena-allocator = arena-allocator: True
+toolkit-enable-block-allocator = block-allocator: True
 toolkit-enable-stack-allocator = stack-allocator: False
-toolkit-enable-multiprocessing = multiprocessing: False
-toolkit-enable-profiling = profiling: False
+toolkit-enable-multiprocessing = multiprocessing: True
+toolkit-enable-profiling = profiling: True
+
+;toolkit - code generation
+toolkit-enable-reflection = reflection: True
+toolkit-enable-yaml-serialization = yaml-serialization: True
+
+;toolkit - profiling
 toolkit-enable-instrumentation = instrumentation: False
 toolkit-enable-vulkan-instrumentation = vulkan-instrumentation: False
-toolkit-build-tests = toolkit-build-tests: False
-toolkit-build-performance = build-performance: False
-toolkit-build-profiler = build-profiler: none
-toolkit-sanitizers = sanitizers: none
-toolkit-enable-yaml-serialization = yaml-serialization: False
+toolkit-enable-sampling = sampling: False
+toolkit-enable-callstack = callstack: False
+toolkit-sampling-rate = sampling-rate: 10000
+
+;vulkit - build
+
+;vulkit - setup
+vulkit-enable-instance = instance: True
+vulkit-enable-physical-device = physical-device: True
+vulkit-enable-logical-device = logical-device: True
+
+;vulkit - feature
+vulkit-enable-allocator = allocator: True
+vulkit-enable-buffer = buffer: True
+vulkit-enable-descriptors = descriptors: True
+vulkit-enable-shaders = shaders: True
+vulkit-enable-pipeline-layout = pipeline-layout: True
+vulkit-enable-pipeline-job = pipeline-job: True
+vulkit-enable-graphics-pipeline = graphics-pipeline: True
+vulkit-enable-compute-pipeline = compute-pipeline: True
+vulkit-enable-command-pool = command-pool: True
+vulkit-enable-images = images: True
+vulkit-enable-render-pass = render-pass: True
+vulkit-enable-swap-chain = swap-chain: True
+
+;onyx - build
 onyx-build-demos = build-demos: False
-onyx-use-implot = use-implot: False
+
+;onyx - feature
+onyx-enable-imgui = imgui: True
+onyx-enable-implot = implot: False
 
 ;you can override default values for some options when other options take specific values by creating new sections as follows:
 ;[<lowercase-cmake-option>.<value-that-triggers-override>]
@@ -43,9 +79,6 @@ onyx-use-implot = use-implot: False
 ;<value-that-triggers-override> may have uppercase letters, as well as <new-default-value> or <default-value>.
 
 [cmake-build-type.Debug]
-info-logs = True
-warning-logs = True
-asserts = True
 
 [cmake-build-type.Release]
 info-logs = True
