--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,17 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CONFIGURATION_TYPES "Debug;Release;Dist")
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-function(define_option varname default)
-    if (NOT DEFINED ${varname})
-        set(${varname} ${default} PARENT_SCOPE)
-    endif()
+function(define_option varname default unused_opt_type)
+  if(NOT DEFINED ${varname})
+    set(${varname}
+        ${default}
+        PARENT_SCOPE)
+  endif()
 endfunction()
 
-define_option(CMAKE_BUILD_TYPE "Debug")
+define_option(CMAKE_BUILD_TYPE "Debug" "Drizzle - Build")
 
 set(DRIZZLE_ROOT_PATH ${CMAKE_CURRENT_SOURCE_DIR})
 
 add_subdirectory(drizzle)
+
