--- a/setup/build.ini
+++ b/setup/build.ini
@@ -27,6 +27,7 @@ toolkit-enable-asserts = asserts: False
 toolkit-enable-arena-allocator = arena-allocator: True
 toolkit-enable-block-allocator = block-allocator: True
 toolkit-enable-stack-allocator = stack-allocator: False
+toolkit-enable-tier-allocator = tier-allocator: False
 toolkit-enable-multiprocessing = multiprocessing: True
 toolkit-enable-profiling = profiling: True
 
