chore: Fix onyx to v0.6.0

--- a/drizzle/CMakeLists.txt
+++ b/drizzle/CMakeLists.txt
@@ -18,7 +18,7 @@ include(FetchContent)
 FetchContent_Declare(
   onyx
   GIT_REPOSITORY https://github.com/ismawno/onyx.git
-  GIT_TAG main
+  GIT_TAG v0.6.0
   GIT_SHALLOW TRUE
   GIT_PROGRESS TRUE)
 FetchContent_MakeAvailable(onyx)
@@ -40,6 +40,6 @@ target_include_directories(drizzle PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}
                                            ${argparse_SOURCE_DIR}/include)
 target_link_libraries(drizzle PRIVATE onyx)
 target_compile_definitions(drizzle PRIVATE DRIZ_ROOT_PATH="${DRIZZLE_ROOT_PATH}"
-                                           DRIZ_VERSION=\"v0.1.2\")
+                                           DRIZ_VERSION=\"v0.3.0\")
 
 tkit_default_configure(drizzle)
